--- a/ICP_1.ipynb
+++ b/ICP_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQd83TtYKznlDKxrcHfjw9",
+      "authorship_tag": "ABX9TyMsW3vU/bFXZA378YOgGC8j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,12 +27,7 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "g7MdapgroUpH"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
       "source": [
         "1. Write a python program for the following:\n",
         "– Input the string “Python” as a list of characters from console, delete at least 2 characters, reversethe\n",
@@ -41,7 +36,10 @@
         "•python\n",
         "•Sample output:\n",
         "•ntyp"
-      ]
+      ],
+      "metadata": {
+        "id": "VBnqTa3twB6R"
+      }
     },
     {
       "cell_type": "code",
@@ -57,7 +55,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0-HRX-vGoYRf",
-        "outputId": "fe722716-5440-4510-cbdd-c823b0187b0f"
+        "outputId": "8484b896-bbd7-4986-b26d-52dce9138947"
       },
       "execution_count": 1,
       "outputs": [
@@ -65,8 +63,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter a string: acghshjs\n",
-            "sjhhgc\n"
+            "Enter a string: python\n",
+            "nhty\n"
           ]
         }
       ]
@@ -103,7 +101,7 @@
         "id": "Pb-omNFxog1i",
         "outputId": "15040e11-a84a-4cd3-c0e2-e431664ca87b"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -146,7 +144,7 @@
         "id": "RuDYxiLLoopZ",
         "outputId": "686c8391-0940-49e7-d961-c779968ef290"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -189,7 +187,7 @@
         "id": "c5E5QbA_ouor",
         "outputId": "1bc336bd-0cc6-420e-d5eb-7ebbd40269ce"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
